language/move-lang/tests/move_check/parser/use_with_main.move
// Test various "use" declarations at the file level.
use 0x0::Module;
use 0XaBcD::Module as M;
use 0x0000::Z;
fun main() {
}
